<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:textColor="@color/cardview_dark_background"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="593dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717">


        <TextView
            android:id="@+id/tv_namabarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNamaBarang" />

        <EditText
            android:id="@+id/et_namabarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etNamaBarang"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_hargabarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvHargaBarang" />

        <EditText
            android:id="@+id/et_hargabarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etHargaBarang"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_jumlahbarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvJumlahBarang" />

        <EditText
            android:id="@+id/et_jumlahbarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etJumlahBarang"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btnTotal" />

        <TextView
            android:id="@+id/tv_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/tvJumlahKembalian2"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_bayar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTotalBayar" />

        <EditText
            android:id="@+id/et_bayar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etTotalBayar"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btnHasil" />

        <TextView
            android:id="@+id/tv_kembalian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvJumlahKembalian"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_kembalian2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvJumlahKembalian2"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_hapus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btnHapus" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>