<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartPage">

    <TextView
        android:id="@+id/tvJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul2"
        android:textColor="@color/cardview_dark_background"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="141dp"
        android:layout_height="202dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJudul"
        app:layout_constraintVertical_bias="0.133"
        app:srcCompat="@drawable/budget" />

    <TextView
        android:id="@+id/tvPengantar"
        android:layout_width="273dp"
        android:layout_height="53dp"
        android:text="@string/tvpengantar"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="316dp"
        android:layout_height="37dp"
        android:ems="10"
        android:hint="@string/etUsername"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPengantar"
        app:layout_constraintVertical_bias="0.142" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="316dp"
        android:layout_height="37dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/etPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:layout_constraintVertical_bias="0.17" />

    <Button
        android:id="@+id/btnMasuk"
        android:layout_width="187dp"
        android:layout_height="49dp"
        android:text="@string/btnMasuk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass" />


</androidx.constraintlayout.widget.ConstraintLayout>